Day 04 - Design Pattern and API architecture
